--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,41 +2,145 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
 .logo {
-    width: 7%;
+    width: 15%;
     border: 2px solid rgb(255, 255, 255);
 
 }
 
-.head-container {
-    width: 80vw;
-    margin:10px auto;
+.cus-container {
+    width: 100vw;
     background-color: black;
-     height: 150px;
-}
-.logo-container{
-  display: flex;
-  justify-content: start;
-}
-.nav-container{
-    display: flex;
-    justify-content: center;
-}
-.trend-bar {
-    position: relative;
+    height: 200px;
+
 }
 
-.trend{
-    position: absolute;
-    left: 40px;
-    top: 0px;
+.nav-container {
+    margin-right: 25%;
 }
-.live-bar{
-    position: relative;
+
+.nav-container ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+
 }
-.live{
-    position: absolute;
-    left: 80px;
+
+.button {
+    display: flex;
+    margin-left: 10px;
+}
+
+.button button {
+    margin-left: 10px;
+    width: 7vw;
+    height: 5vh;
+    border-radius: 25px;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    border: 3px solid wheat;
+}
+
+.nav-container span {
+    padding-right: 8px;
+    font-size: 20px;
+}
+
+.nav-container li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+    color: white;
+    cursor: pointer;
+
+}
+
+.head-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.head-container {
+    width: 90%;
+    margin: 0 auto;
+
+}
+
+.logo-container {
+    display: flex;
+    justify-content: start;
+    padding: 30px 0;
+}
+
+.form {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.form input {
+    width: 550px;
+    height: 50px;
+    background-color: black;
+    color: white;
+    border-radius: 12px;
+    margin-right: 15px;
+    border: 3px solid yellow;
+
+}
+
+.form button {
+    width: 200px;
+    border-radius: 25px;
+    background-color: yellowgreen;
+    font-size: medium;
+}
+
+.playstore {
+
+    background-color: black;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 10%;
+    border: 1px solid white;
+    border-radius: 8px;
+}
+
+.playstore img {
+    width: 40px;
+    height: auto;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+    display: grid;
+    align-items: center;
+
+}
+.appstore {
+
+    background-color: black;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 10%;
+    border: 1px solid white;
+    border-radius: 8px;
+    margin-top: 1%;
+}
+.appstore img {
+    width: 40px;
+    height: auto;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+    display: grid;
+    align-items: center;
+
 }
