--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     list-style: none;
+    text-decoration: none;
 }
 
 .logo {
@@ -115,15 +116,6 @@
     border-radius: 8px;
 }
 
-.playstore img {
-    width: 40px;
-    height: auto;
-    border-radius: 8px;
-    transition: transform 0.3s ease;
-    display: grid;
-    align-items: center;
-
-}
 .appstore {
 
     background-color: black;
@@ -135,6 +127,33 @@
     border-radius: 8px;
     margin-top: 1%;
 }
+.playstore a {
+    display: flex;
+    gap: 10px;
+    text-decoration: none;
+    color: white;
+}
+
+.appstore a {
+    display: flex;
+    gap: 10px;
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+    align-items: center;
+}
+
+.playstore img {
+    width: 40px;
+    height: auto;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+    display: grid;
+    align-items: center;
+
+}
+
+
 .appstore img {
     width: 40px;
     height: auto;
@@ -143,4 +162,26 @@
     display: grid;
     align-items: center;
 
+}
+.list{
+    display: flex;
+    margin-left: 220px;
+    margin-top: -97px;
+}
+.list ul li a{
+    
+    color: white;
+    font-size: smaller;
+}
+.ul{
+margin-left: 80px;
+}
+.social i{
+    background-color: black;
+    color: white;
+    margin-left: 5px;
+}
+.social{
+    margin-left: 1233px;
+    margin-top: -80px;
 }
