--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,74 +4,30 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-}
-
-.logo {
-    width: 15%;
-    border: 2px solid rgb(255, 255, 255);
 
 }
 
-.cus-container {
-    width: 100vw;
+body {
     background-color: black;
-    height: 200px;
-
 }
 
-.nav-container {
-    margin-right: 25%;
-}
-
-.nav-container ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
-
-}
-
-.button {
-    display: flex;
-    margin-left: 10px;
-}
-
-.button button {
-    margin-left: 10px;
-    width: 7vw;
-    height: 5vh;
-    border-radius: 25px;
+.head-container {
+    width: 100%;
     background-color: black;
-    color: white;
-    font-size: 20px;
-    border: 3px solid wheat;
-}
-
-.nav-container span {
-    padding-right: 8px;
-    font-size: 20px;
-}
-
-.nav-container li {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 8px;
-    color: white;
-    cursor: pointer;
 
 }
 
 .head-bar {
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.head-container {
-    width: 90%;
-    margin: 0 auto;
+.logo {
+    width: 60px;
+    border: 2px solid rgb(255, 255, 255);
 
 }
 
@@ -81,70 +37,122 @@
     padding: 30px 0;
 }
 
-.form {
+.nav-container ul {
+    gap: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-container a {
+    color: white;
+    font-size: 20px;
+}
+
+.nav-container i {
+    margin-right: 5px;
+}
+
+
+
+.button {
+    display: flex;
+}
+
+.button button {
+    margin-left: 10px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: black;
+    color: white;
+    font-size: 15px;
+    border: 3px solid wheat;
+    padding: 5px 20px;
+}
+
+.head-container .form {
+    width: 90%;
+    margin: 0 auto;
+
+
+}
+
+form {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 
 }
 
+
 .form input {
-    width: 550px;
+    width: 40%;
     height: 50px;
     background-color: black;
     color: white;
     border-radius: 12px;
     margin-right: 15px;
     border: 3px solid yellow;
-
+    padding: 0 15px;
 }
 
 .form button {
-    width: 200px;
+    width: 15%;
     border-radius: 25px;
     background-color: yellowgreen;
     font-size: medium;
 }
 
-.playstore {
-
-    background-color: black;
+/*Footer*/
+.foot-container {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 15px;
+    min-height: 300px;
     display: flex;
     justify-content: start;
-    align-items: center;
-    width: 10%;
+    padding: 5px 0;
+
+
+}
+
+.playstore {
+
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    width: 120px;
     border: 1px solid white;
     border-radius: 8px;
 }
 
 .appstore {
-
-    background-color: black;
     display: flex;
     justify-content: start;
-    align-items: center;
-    width: 10%;
+    align-items: start;
+    width: 120px;
     border: 1px solid white;
     border-radius: 8px;
-    margin-top: 1%;
+    margin-top: 10px;
 }
+
 .playstore a {
     display: flex;
     gap: 10px;
-    text-decoration: none;
     color: white;
+    font-size: 12px;
 }
 
 .appstore a {
     display: flex;
     gap: 10px;
-    text-decoration: none;
     color: white;
     font-size: 12px;
     align-items: center;
 }
 
 .playstore img {
-    width: 40px;
+    width: 30px;
     height: auto;
     border-radius: 8px;
     transition: transform 0.3s ease;
@@ -155,7 +163,7 @@
 
 
 .appstore img {
-    width: 40px;
+    width: 30px;
     height: auto;
     border-radius: 8px;
     transition: transform 0.3s ease;
@@ -163,132 +171,126 @@
     align-items: center;
 
 }
-.list{
+
+.list {
     display: flex;
     margin-left: 220px;
-    margin-top: -97px;
+    margin-top: -80px;
 }
-.list ul li a{
-    
+
+.list ul li a {
+
     color: white;
     font-size: smaller;
 }
-.ul{
-margin-left: 80px;
+
+.ul {
+    margin-left: 80px;
 }
-.social i{
-    background-color: black;
+
+.social i {
+    /* background-color: black; */
     color: white;
     margin-left: 5px;
+    /* display: flex;
+    justify-content: end; */
 }
-.social{
-    margin-left: 1233px;
-    margin-top: -80px;
+
+.social {
     display: flex;
     justify-content: end;
-} 
 
+}
+
+.salam {
+    width: 100%;
+}
 
 
 @media (max-width: 992px) {
-    .head-bar {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 10px;
-    }
-
-    .nav-container {
-        margin: 0;
+    .nav-container ul {
+        gap: 20px;
     }
 
     .button button {
-        width: 120px;
-        height: 40px;
         font-size: 15px;
+        padding: 6px 10px;
     }
 
     .form input {
-        width: 80%;
-    }
-
-    .form button {
-        width: 150px;
-    }
-
-    .playstore, .appstore {
-        width: 25%;
+        flex: 1 1 200px;
     }
 
     .list {
-        margin-left: 0;
-        margin-top: 20px;
-        justify-content: center;
-    }
-
-    .social {
         justify-content: center;
     }
 }
 
 
 @media (max-width: 768px) {
-    .logo {
-        width: 40%;
+
+
+    .nav-container {
+        display: none;
     }
 
-    .nav-container ul {
-        flex-direction: column;
-        gap: 15px;
+    .button {
+        margin-top: 10px;
     }
 
-    .form {
-        flex-direction: column;
-        align-items: center;
-    }
 
     .form input {
-        width: 90%;
+        width: 100%;
+        margin-top: 15px;
+
     }
 
     .form button {
-        width: 80%;
+        width: 100%;
+        font-size: 15px;
+        padding: 8px 0;
+        border-radius: 15px;
+        margin-top: 15px;
     }
 
-    .playstore, .appstore {
-        width: 40%;
-        justify-content: center;
-    }
 
     .list {
         flex-direction: column;
         align-items: center;
-        gap: 20px;
-        margin: 20px 0;
+        gap: 15px;
     }
 
-    .social {
+    .playstore,
+    .appstore {
+        width: 80%;
         justify-content: center;
+    }
+
+    form {
+        display: block;
+        justify-content: center;
+        width: 100%;
+
     }
 }
 
 @media (max-width: 480px) {
-    .button {
-        flex-direction: column;
-        gap: 8px;
+    .logo {
+        width: 80px;
+    }
+
+    .nav-container {
+        display: none;
     }
 
     .button button {
-        width: 80%;
-        font-size: 14px;
+        width: 100%;
+        padding: 10px 0;
     }
 
-    .nav-container span {
-        font-size: 16px;
-    }
-
-    .playstore, .appstore {
-        width: 70%;
+    .playstore,
+    .appstore {
+        width: 100%;
     }
 
     .list ul li a {
@@ -297,5 +299,147 @@ margin-left: 80px;
 
     .form input {
         height: 45px;
+        width: 100%;
     }
+
+    form {
+        display: block;
+
+
+    }
+}
+
+
+.carousel-item img {
+    height: 650px;
+    object-position: 50%;
+    border-radius: 15px;
+}
+
+.carousel-caption {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 12px;
+    padding: 15px;
+}
+
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    filter: invert(1);
+}
+
+
+#movies {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    gap: 15px;
+    padding: 20px;
+}
+
+#movies::-webkit-scrollbar {
+    height: 8px;
+    /* Scroll çubuğunun qalınlığı */
+}
+
+#movies::-webkit-scrollbar-thumb {
+    background-color: #ffcb04;
+    /* Scroll çubuğunun rəngi */
+    border-radius: 10px;
+}
+
+.card {
+    flex: 0 0 auto;
+    /* Kartların ölçüsünü sabit saxla */
+    width: 18rem;
+}
+
+.scroll-btn {
+    position: absolute;
+    top: 900px;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    border: none;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    padding: 10px 10px;
+    border-radius: 50%;
+    z-index: 10;
+    transition: background-color 0.3s ease;
+}
+
+.scroll-btn:hover {
+    background-color: rgba(255, 203, 4, 0.9);
+    color: black;
+}
+
+.left-btn {
+    left: 10px;
+}
+
+.right-btn {
+    right: 10px;
+}
+
+#exxenSlider {
+    margin-top: 50px;
+}
+
+.card-container {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.btn {
+    color: rgb(55, 70, 5);
+    background-color: rgb(66, 254, 232);
+}
+
+.card {
+    background-color: black;
+}
+
+.card h5 {
+    color: white;
+}
+
+.card p {
+    color: white;
+}
+
+#searchInput {
+    width: 95%;
+    margin: 35px auto;
+    height: 50px;
+    background-color: black;
+    padding-left: 50px;
+    padding-right: 10px;
+    color: aliceblue;
+    border-radius: 15px;
+    border: 4px solid rgb(188, 188, 32);
+    position: absolute;
+
+}
+
+.search-box {
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.search-box i {
+    color: aliceblue;
+    position: absolute;
+    left: 45px;
+    top: 45px;
+    z-index: 1;
+
+}
+
+.card {
+    margin-top: 100px;
 }
