--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -625,3 +625,153 @@ footer {
 }
 
 
+
+.burger-toggle {
+  display: none;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 26px;
+  cursor: pointer;
+}
+
+
+#burger-menu {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 80%;
+  max-width: 360px;
+  height: 100vh;
+  background: linear-gradient(to bottom, #1a1a00, #000);
+  color: #fff;
+  transition: right 0.4s ease;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
+}
+
+#burger-menu.active {
+  right: 0;
+}
+
+#burger-menu .close-menu {
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 26px;
+  cursor: pointer;
+}
+
+
+.menu-profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.menu-profile i {
+  font-size: 50px;
+  color: #ffcb04;
+  margin-bottom: 15px;
+  border: 2px solid #ffcb04;
+  border-radius: 50%;
+  padding: 15px;
+}
+
+.login-register {
+  background-color: #ffcb04;
+  border: none;
+  border-radius: 30px;
+  padding: 10px 25px;
+  color: black;
+  font-weight: 600;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.login-register:hover {
+  background-color: #ffd633;
+}
+
+.menu-links {
+  width: 80%;
+  text-align: left;
+  margin-top: 10px;
+}
+
+.menu-links li {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 12px 10px;
+  font-size: 18px;
+  cursor: pointer;
+  border-left: 3px solid transparent;
+  transition: all 0.3s ease;
+}
+
+.menu-links li i {
+  font-size: 18px;
+}
+
+.menu-links li.active {
+  color: #ffcb04;
+  border-left: 3px solid #ffcb04;
+}
+
+.menu-links li:hover {
+  color: #ffcb04;
+}
+@media (max-width: 768px) {
+  .burger-toggle {
+    display: block; 
+  }
+
+  .nav-container,
+  .login-btn {
+    display: none !important; 
+  }
+}
+@media (max-width: 768px) {
+  .movie-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .movie-details img {
+    width: 70%;
+    max-width: 300px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+  }
+
+  .movie-info {
+    max-width: 90%;
+    text-align: center;
+    align-items: center;
+  }
+
+  .movie-name {
+    font-size: 1.8rem;
+  }
+
+  .movie-genres {
+    font-size: 1rem;
+  }
+
+  .movie-summary {
+    font-size: 0.95rem;
+    color: #ccc;
+  }
+}
